4 coef scaling function using orthogonal quadrature condition

--- a/common/wavelets/ortho.tex
+++ b/common/wavelets/ortho.tex
@@ -109,7 +109,7 @@ Let $\mrasys$ be an \structe{MRA system} \xref{def:mrasys}.
      && \text{by the \thme{dilation equation}}
      && \text{\xref{thm:dilation_eq}}
    \\&= \sum_{m\in\Z}h_m\inprod{\opDil\opTrn^m \fphi}{\opDil\opTrn^n\fphi}
-     && \text{by \prope{additive} property of $\inprodn$} 
+     && \text{by \prope{additive} property of $\inprodn$}
      && \text{\xref{def:inprod}}
    \\&= \sum_{m\in\Z}h_m \inprod{\sqrt{2}\fphi(2x-m)}{\sqrt{2}\fphi(2x-n)}
      && \text{by definition of $\opTrn$ and $\opDil$}
@@ -1243,7 +1243,7 @@ Let $\wavsys$ be a \structe{wavelet system} \xref{def:wavsys}.
   \\&= \inprod{\setind_\intco{0}{1}(x)-2\setind_\intco{\half }{1}(x)}{\sqrt{2}\setind_{[0,1)}(2x-n)}
     && \text{by definition of $\fphi$ and $\fpsi$}
   \\&= \mathrlap{%
-          \sqrt{2} \inprod{\setind_\intco{0}{1}(x)}{\setind_{[0,1)}(2x-n)} 
+          \sqrt{2} \inprod{\setind_\intco{0}{1}(x)}{\setind_{[0,1)}(2x-n)}
        - 2\sqrt{2}\inprod{\setind_\intco{\half }{1}(x)}{\setind_{[0,1)}(2x-n)}
        \quad\text{by property of $\inprodn$}
        }
@@ -2053,9 +2053,9 @@ Let $\wavsys$ be a \structe{wavelet system} \xref{def:ows}.
 %      \\&=  \Dh(\omega)\Fg^\ast(\omega) + \Dh(\omega+\pi)\Fg^\ast(\omega+\pi)
 %        &&  \text{by hypothesis (1) and \prefp{thm:Swfgo}}
 %      \\&=  \Dh(\omega)
-%            \left[s(-1)^\xN e^{-i\xN\omega} \Dh^\ast(\omega+\pi) \right]^\ast
+%            \brs{s(-1)^\xN e^{-i\xN\omega} \Dh^\ast(\omega+\pi) }^\ast
 %          \\&\indentx+ \Dh(\omega+\pi)
-%            \left[s(-1)^\xN e^{-i\xN(\omega+\pi)} \Dh^\ast(\omega+2\pi) \right]^\ast
+%            \brs{s(-1)^\xN e^{-i\xN(\omega+\pi)} \Dh^\ast(\omega+2\pi) }^\ast
 %        &&  \text{by hypothesis (2) and \prefp{thm:ortho_qmr}}
 %      \\&=  \Dh(\omega)
 %            s(-1)^\xN e^{-i\xN\omega} \Dh(\omega+\pi)
@@ -2098,16 +2098,16 @@ Let $\wavsys$ be a \structe{wavelet system} \xref{def:ows}.
 %    \begin{align*}
 %      &\Dh(\omega)\Fg^\ast(\omega)+\Dh(\omega+\pi)\Fg^\ast(\omega+\pi)
 %      \\&=  \Dh(\omega)
-%            \left[ s(-1)^\xN e^{i\xN\omega} \Dh^\ast(\omega+\pi) \right]^\ast
+%            \brs{ s(-1)^\xN e^{i\xN\omega} \Dh^\ast(\omega+\pi) }^\ast
 %          + \Dh(\omega+\pi)
-%            \left[ s(-1)^\xN e^{i\xN(\omega+\pi)} \Dh^\ast(\omega+2\pi) \right]^\ast
+%            \brs{ s(-1)^\xN e^{i\xN(\omega+\pi)} \Dh^\ast(\omega+2\pi) }^\ast
 %            \quad\text{by left hypothesis}
 %      \\&=  \Dh(\omega)
 %            s(-1)^\xN e^{-i\xN\omega} \Dh(\omega+\pi)
 %          + \Dh(\omega+\pi)
 %            s(-1)^\xN e^{-i\xN\omega}e^{-i\xN\pi} \Dh(\omega)
 %      \\&=  s(-1)^\xN \Dh(\omega)\Dh(\omega+\pi) e^{-i\xN\omega}
-%            \left[1+e^{-i\xN\pi}\right]
+%            \brs{1+e^{-i\xN\pi}}
 %      \\&=  0
 %    \end{align*}
 %
@@ -2185,7 +2185,7 @@ Let $\spO\eqd\wavsys$ be a tuple. %\structe{wavelet system} \xref{def:wavsys}.
         \begin{enumerate}
           \item Proof that $\sum_{n\in\Z}h_{n}=\sqrt{2}$: by left hypothesis (A)
           \item Proof that $\sum_{m\in\Z}h_m h^\ast_{m-2n} = \kdelta_n$: by left hypothesis (B)
-          \item Proof that $\Fphi(\omega)$ is \prope{continuous} at $0$: 
+          \item Proof that $\Fphi(\omega)$ is \prope{continuous} at $0$:
             \begin{align*}
               (C) &\implies \sum_{k\in\Z}(-1)^k k^n\fh_k = 0\quad{\scy\forall n=0,1,\ldots,p-1,\,p\ge2}
                 \\&\implies \text{$\fpsi$ has \prope{$p$ vanishing moments}}
@@ -2261,31 +2261,30 @@ or by hand.
 
 %--------------------------------------
 \begin{example}[\exmd{2 coefficient case}---\exmd{Haar wavelet system}]
-\label{ex:ortho_n=2}
 \index{Haar wavelet}
 \index{wavelets!Haar}
+\label{ex:ortho_n=2}
 %--------------------------------------
 Let $\wavsys$ be an \emph{orthogonal} wavelet system with two non-zero scaling coefficients.
 \exbox{
   \brb{\begin{array}{FMMD}
-    1. & $\support\fphi(x)=\intcc{0}{1}$                             & \xref{thm:support}     & and\\
-    2. & \prope{admissibility condition}                             & \xref{thm:admiss}      & and \\
-    3. & $\setn{\opTrn^n\fphi}$ is \prope{orthonormal}                & \xref{lem:ows_quadcon} & and\\
-    4. & $\fg_n  = \pm (-1)^n \fh_{\xN-n}^\ast$ $\scy\forall n\in\Z$  & \xref{thm:ortho_qmr}        &
+      (1). & $\support\fphi(x)=\intcc{0}{1}$                              & \xref{thm:support}     & and
+    \\(2). & \prope{admissibility condition}                              & \xref{thm:admiss}      & and
+    \\(3). & $\setn{\opTrn^n\fphi}$ is \prope{orthonormal}                & \xref{lem:ows_quadcon} &
+   %\\(4). & $\fg_n  = \pm (-1)^n \fh_{\xN-n}^\ast$ $\scy\forall n\in\Z$  & \xref{thm:ortho_qmr}   &
   \end{array}}
   \implies
-  \brb{\begin{array}{r|l|l}%
-    n  & \fh_{n}  &\fg_n\\
-    \hline
-    0  & \ds \cwt  & \ds \cwt  \\
-    1  & \ds \cwt  & \ds -\cwt \\
-    \text{other} & 0 & 0
+  \brb{\begin{array}{c|r|r}%
+      n            & \fh_{n}            & \fg_n
+    \\\hline
+      0            & \frac{\sqrt{2}}{2} &  \frac{\sqrt{2}}{2}
+    \\1            & \frac{\sqrt{2}}{2} & -\frac{\sqrt{2}}{2}
+    \\\text{other} & 0                  & 0
   \end{array}}
   }%
-\\
-  \begin{tabular}{cc}
-    \includegraphics{../common/math/graphics/pdfs/d1_phi_h.pdf}&\includegraphics{../common/math/graphics/pdfs/d1_psi_g.pdf}
-  \end{tabular}
+\\\indentx\includegraphics{../common/math/graphics/pdfs/D1_pz.pdf}
+     \quad\includegraphics{../common/math/graphics/pdfs/d1_phi_h.pdf}
+     \quad\includegraphics{../common/math/graphics/pdfs/d1_psi_g.pdf}
 \end{example}
 \begin{proof}
 \begin{enumerate}
@@ -2310,7 +2309,6 @@ Let $\wavsys$ be an \emph{orthogonal} wavelet system with two non-zero scaling c
         \\&= \cwt
     \end{align*}
 
-
   \item Note: $\fh_0$ and $\fh_1$ are the \hie{Haar scaling coefficients}.
     They can also be produced using other systems of equations including the following:
     \begin{dingautolist}{"AC}
@@ -2331,163 +2329,171 @@ Let $\wavsys$ be an \emph{orthogonal} wavelet system with two non-zero scaling c
   }
 \label{ex:pun_n=4}
 %---------------------------------------
-In this example,
-%we remove the orthonormality constraint and replace it with
-%the more general \hie{partition of unity} constraint
-%(all orthonormal wavelet systems possess the partition of unity property---\prefp{thm:quad=>zero_unity}).
-we constrain the system to have $p=2$ vanishing moments.
-%In this case, the equations are independent and the coefficients
-%can be calculated.
-This same wavelet system is identical to the \hie{Daubechies-$p2$} wavelet system
-which is computed using a spectral factorization technique---\prefpp{ex:dau-p2}.
-Here are the equations:
-
-\[\begin{array}{*{9}{r}D}
- \fh_0      &+&\fh_1      &+&\fh_2   &+&\fh_3   &=& \sqrt{2}
-  &{(admissibility---\prefp{thm:admiss})} \\
- \fh_0      &-&\fh_1      &+&\fh_2   &-&\fh_3   &=& 0
-  &{(vanishing 0th moment/partition of unity---\prefpo{thm:pun_zero})} \\
-           &-&\fh_1      &+& 2h_2  &-&3h_3   &=& 0
-  &{(vanishing 1st moment---\prefp{thm:gh_cqf})} \\
- \fh_0^2    &+&\fh_1^2    &+&\fh_2^2 &+&\fh_3^2 &=& 1
-  &{($m=0$ ortho. quad. con.---\prefp{lem:ows_quadcon})}
-\end{array}\]
-Then the scaling coefficients have the following values:\\
-\begin{minipage}{5\tw/16}%
-  \exbox{\begin{array}{r|l|l}%
-    n & \sqrt{2}\fh_n  & \sqrt{2}\fg_n  \\
-    \hline
-      0   & \frac{1+\sqrt{3}}{4}  &  \frac{1-\sqrt{3}}{4}  \\
-      1   & \frac{3+\sqrt{3}}{4}  & -\frac{3-\sqrt{3}}{4}  \\
-      2   & \frac{3-\sqrt{3}}{4}  &  \frac{3+\sqrt{3}}{4}  \\
-      3   & \frac{1-\sqrt{3}}{4}  & -\frac{1+\sqrt{3}}{4}
-  \end{array}}%
-\end{minipage}%
-\begin{minipage}{11\tw/16}%
-  \begin{tabular}{cc}
-    \includegraphics{../common/math/graphics/pdfs/d2_phi_h.pdf}&\includegraphics{../common/math/graphics/pdfs/d2_psi_g.pdf}
-  \end{tabular}
-\end{minipage}
+Let $\wavsys$ be an \emph{orthogonal} wavelet system with two non-zero scaling coefficients.
+\exbox{
+  \brb{\begin{array}{FMMD}
+      (1). & $\support\fphi(x)=\intcc{0}{3}$                              & \xref{thm:support}     & and
+    \\(2). & \prope{admissibility condition}                              & \xref{thm:admiss}      & and
+    \\(3). & \prope{partition of unity}                                   & \xref{thm:pun_zero}    & and
+    \\(4). & \prope{vanishing 1st moment}                                 & \xref{thm:gh_cqf}      & and
+    \\(5). & $\setn{\opTrn^n\fphi}$ is \prope{orthonormal}                & \xref{lem:ows_quadcon} & and
+    \\(6). & $[-\fh_n]$ is \prope{minimum phase}                          & \xref{def:minphase}    &
+   %\\(7). & $\fg_n  = \pm (-1)^n \fh_{\xN-n}^\ast$ $\scy\forall n\in\Z$  & \xref{thm:ortho_qmr}   &
+  \end{array}}
+  \implies
+  \brb{\begin{array}{c|r|r}%
+        n            & \fh_{n}                            &\fg_n
+      \\\hline
+        0            & \frac{\sqrt{2}}{2}\brs{1+\sqrt{3}} &  \fh_3
+      \\1            & \frac{\sqrt{2}}{2}\brs{3+\sqrt{3}} & -\fh_2
+      \\2            & \frac{\sqrt{2}}{2}\brs{3-\sqrt{3}} &  \fh_1
+      \\3            & \frac{\sqrt{2}}{2}\brs{1-\sqrt{3}} & -\fh_0
+      \\\text{other} & 0                                  &  0
+  \end{array}}
+  }%
+\\\indentx\includegraphics{../common/math/graphics/pdfs/D2_pz.pdf}
+     \quad\includegraphics{../common/math/graphics/pdfs/d2_phi_h.pdf}
+     \quad\includegraphics{../common/math/graphics/pdfs/d2_psi_g.pdf}
 \end{example}
 \begin{proof}
 \begin{enumerate}
-\item Solve the 3 linear equations in terms of $\fh_3$:
-\begin{align*}
-\left[\begin{array}{rrrr@{\hspace{3ex}}r}
-    1 &  1 &  1 &  1 & \sqrt{2}   \\
-    1 & -1 &  1 & -1 & 0          \\
-    0 & -1 &  2 & -3 & 0
-\end{array}\right]
-&\rightarrow&
-\left[\begin{array}{rrrr@{\hspace{3ex}}r}
-    1 &  1 &  1 &  1 & \sqrt{2}   \\
-    0 & -2 &  0 & -2 &-\sqrt{2}   \\
-    0 & -1 &  2 & -3 & 0
-\end{array}\right]
-&\rightarrow&
-\left[\begin{array}{rrrr@{\hspace{3ex}}r}
-    1 &  0 &  3 & -2 & \sqrt{2}   \\
-    0 &  0 & -4 &  4 &-\sqrt{2}   \\
-    0 &  1 & -2 &  3 & 0
-\end{array}\right]
-&\rightarrow&
-\\
-\left[\begin{array}{rrrr@{\hspace{3ex}}r}
-    1 &  0 &  3 & -2 & \sqrt{2}   \\
-    0 &  1 & -2 &  3 & 0          \\
-    0 &  0 &  1 & -1 & \frac{\sqrt{2}}{4}
-\end{array}\right]
-&\rightarrow&
-\left[\begin{array}{rrrr@{\hspace{3ex}}r}
-    1 &  0 &  0 &  1 & \frac{\sqrt{2}}{4}   \\
-    0 &  1 &  0 &  1 & \cwt   \\
-    0 &  0 &  1 & -1 & \frac{\sqrt{2}}{4}
-\end{array}\right]
-\end{align*}
-\begin{align*}
- \fh_0 &= \frac{\sqrt{2}}{4} -\fh_3  \\
- \fh_1 &= \cwt -\fh_3  \\
- \fh_2 &= \frac{\sqrt{2}}{4} +\fh_3  \\
-\end{align*}
+  \item Here are the equations:
+  \\$\begin{array}{*{9}{r}D}
+      \fh_0      &+&\fh_1      &+&\fh_2   &+&\fh_3   &=& \sqrt{2} &{(admissibility---\prefp{thm:admiss})}
+    \\\fh_0      &-&\fh_1      &+&\fh_2   &-&\fh_3   &=& 0        &{(vanishing 0th moment/partition of unity---\prefpo{thm:pun_zero})}
+    \\           &-&\fh_1      &+& 2h_2   &-&3h_3    &=& 0        &{(vanishing 1st moment---\prefp{thm:gh_cqf})}
+    \\\fh_0^2    &+&\fh_1^2    &+&\fh_2^2 &+&\fh_3^2 &=& 1        &{($m=0$ ortho. quad. con.---\prefp{lem:ows_quadcon})}
+  \end{array}$
 
-\item Solve the forth quadratic equation in terms of $\fh_3$:
-\begin{align*}
-  1
-    &=  \left(\frac{\sqrt{2}}{4}-h_3\right)^2
-    &&+ \left(\cwt-h_3\right)^2
-    &&+ \left(\frac{\sqrt{2}}{4}+h_3\right)^2
-    &&+\fh_3^2 \hs{1cm}
-  \\&=  \left(\frac{1}{8}-\sqrt{2}{2}h_3+h_3^2\right)
-    &&+ \left(\half -\sqrt{2}h_3+h_3\right)
-    &&+ \left(\frac{1}{8}+\cwt+h_3^2\right)
-    &&+\fh_3^2 \hs{1cm}
-  \\&=  4h_3^2 -\sqrt{2}h_3 + \frac{3}{4}
-\\
-  4h_3^2 -\sqrt{2}h_3 - \frac{1}{4} &=0
-\\
- \fh_3
-    &= \frac{\sqrt{2}\pm\sqrt{2+4}}{8}
-  \\&= \frac{\sqrt{2}\pm\sqrt{6}}{8}
-  \\&= \frac{\sqrt{2}}{8}(1\pm\sqrt{3})
-\end{align*}
+  \item Solve the first 3 linear equations in terms of $\fh_3$:
+    \begin{align*}
+      \brs{\begin{array}{rrrr|r}
+          1 &  1 &  1 &  1 & \sqrt{2}
+        \\1 & -1 &  1 & -1 & 0
+        \\0 & -1 &  2 & -3 & 0
+      \end{array}}
+      &\rightarrow
+      \brs{\begin{array}{rrrr|r}
+          1 &  1 &  1 &  1 & \sqrt{2}
+        \\0 & -2 &  0 & -2 &-\sqrt{2}
+        \\0 & -1 &  2 & -3 & 0
+      \end{array}}
+      &&\rightarrow
+      \brs{\begin{array}{rrrr|r}
+          1 &  0 &  3 & -2 & \sqrt{2}   \\
+          0 &  0 & -4 &  4 &-\sqrt{2}   \\
+          0 &  1 & -2 &  3 & 0
+      \end{array}}
+      &&\rightarrow
+      \\
+      \brs{\begin{array}{rrrr|r}
+          1 &  0 &  3 & -2 & \sqrt{2}   \\
+          0 &  1 & -2 &  3 & 0          \\
+          0 &  0 &  1 & -1 & \frac{\sqrt{2}}{4}
+      \end{array}}
+      &&\rightarrow
+      \brs{\begin{array}{rrrr|r}
+          1 &  0 &  0 &  1 & \frac{\sqrt{2}}{4}   \\
+          0 &  1 &  0 &  1 & \cwt   \\
+          0 &  0 &  1 & -1 & \frac{\sqrt{2}}{4}
+      \end{array}}
+      &&\implies
+      \brs{\begin{array}{l}
+          \fh_0 
+        \\\fh_1
+        \\\fh_2
+      \end{array}}
+      =
+      \brs{\begin{array}{l}
+           \frac{\sqrt{2}}{4} -\fh_3
+         \\\frac{\sqrt{2}}{2} -\fh_3
+         \\\frac{\sqrt{2}}{4} +\fh_3
+      \end{array}}
+      \end{align*}
 
-\item Simplify the results:
-\[\begin{array}{r*{4}{cl}}
- \fh_3 &=& \frac{\sqrt{2}}{8}(1-\sqrt{3})
-\\
- \fh_2 &=& \frac{\sqrt{2}}{4} +\fh_3
-      &=& \frac{\sqrt{2}}{4} + \frac{\sqrt{2}}{8}(1-\sqrt{3})
-      &=& \frac{\sqrt{2}}{8}(2+1-\sqrt{3})
-      &=& \frac{\sqrt{2}}{8}(3-\sqrt{3})
-\\
- \fh_1 &=& \cwt -\fh_3
-      &=& \cwt - \frac{\sqrt{2}}{8}(1-\sqrt{3})
-      &=& \frac{\sqrt{2}}{8}(4-1+\sqrt{3})
-      &=& \frac{\sqrt{2}}{8}(3+\sqrt{3})
-\\
- \fh_0 &=& \frac{\sqrt{2}}{4} -\fh_3
-      &=& \frac{\sqrt{2}}{4} - \frac{\sqrt{2}}{8}(1-\sqrt{3})
-      &=& \frac{\sqrt{2}}{8}(2-1+\sqrt{3})
-      &=& \frac{\sqrt{2}}{8}(1+\sqrt{3})
-\end{array}\]
+    \item Solve the quadrature equation in terms of $\fh_3$:
+      \begin{align*}
+        1
+          &=  \left(\frac{\sqrt{2}}{4}-\fh_3\right)^2
+          &&+ \left(\cwt-h_3\right)^2
+          &&+ \left(\frac{\sqrt{2}}{4}+\fh_3\right)^2
+          &&+\fh_3^2 \hs{1cm}
+        \\&=  \left(\frac{1}{8}-\frac{\sqrt{2}}{2}\fh_3 + \fh_3^2\right)
+          &&+ \left(\half -\sqrt{2}h_3+\fh_3\right)
+          &&+ \left(\frac{1}{8} + \frac{\sqrt{2}}{2} + \fh_3^2\right)
+          &&+\fh_3^2
+        \\&=  4h_3^2 -\sqrt{2}\fh_3 + \frac{3}{4}
+      \\
+        4h_3^2 -\sqrt{2}h_3 - \frac{1}{4} &=0
+      \\
+       \fh_3
+          &= \frac{\sqrt{2}\pm\sqrt{2+4}}{8}
+         &&= \frac{\sqrt{2}\pm\sqrt{6}}{8}
+         &&= \frac{\sqrt{2}}{8}(1\pm\sqrt{3})
+      \end{align*}
 
-\item Solution using {\em Maxima}\texttrademark \hspace{1ex}(2 sets of solutions): \\
-%\begin{minipage}{120mm}
-\begin{lstlisting}[language=MuPAD,frame=single]
-  solve([h0+h1+h2+h3=sqrt(2),h0-h1+h2-h3=0,-h1+2*h2-3*h3=0,h0^2+h1^2+h2^2+h3^2=1],
-        [h0,h1,h2,h3]);
-\end{lstlisting}
-%\end{minipage}\\
-\[\begin{array}{rcl}
-   \fh_0 &=& -\frac{\sqrt{6}- \sqrt{2}}{8} \\
-   \fh_1 &=& -\frac{\sqrt{6}-3\sqrt{2}}{8} \\
-   \fh_2 &=&  \frac{\sqrt{6}+3\sqrt{2}}{8} \\
-   \fh_3 &=&  \frac{\sqrt{6}+ \sqrt{2}}{8} \\
-  \end{array}
-  \hspace{2cm}
-  \begin{array}{rcl}
-   \fh_0 &=&  \frac{\sqrt{6}+ \sqrt{2}}{8} \\
-   \fh_1 &=&  \frac{\sqrt{6}+3\sqrt{2}}{8} \\
-   \fh_2 &=& -\frac{\sqrt{6}-3\sqrt{2}}{8} \\
-   \fh_3 &=& -\frac{\sqrt{6}- \sqrt{2}}{8}
+  \item Simplify the results:
+  \[\begin{array}{r*{4}{cl}}
+   \fh_3 &=& \frac{\sqrt{2}}{8}(1-\sqrt{3})
+  \\
+   \fh_2 &=& \frac{\sqrt{2}}{4} +\fh_3
+        &=& \frac{\sqrt{2}}{4} + \frac{\sqrt{2}}{8}(1-\sqrt{3})
+        &=& \frac{\sqrt{2}}{8}(2+1-\sqrt{3})
+        &=& \frac{\sqrt{2}}{8}(3-\sqrt{3})
+  \\
+   \fh_1 &=& \cwt -\fh_3
+        &=& \cwt - \frac{\sqrt{2}}{8}(1-\sqrt{3})
+        &=& \frac{\sqrt{2}}{8}(4-1+\sqrt{3})
+        &=& \frac{\sqrt{2}}{8}(3+\sqrt{3})
+  \\
+   \fh_0 &=& \frac{\sqrt{2}}{4} -\fh_3
+        &=& \frac{\sqrt{2}}{4} - \frac{\sqrt{2}}{8}(1-\sqrt{3})
+        &=& \frac{\sqrt{2}}{8}(2-1+\sqrt{3})
+        &=& \frac{\sqrt{2}}{8}(1+\sqrt{3})
   \end{array}\]
-%                SQRT(6) - SQRT(2)         SQRT(2) SQRT(3) - 3 SQRT(2)
-%(%o36) [[h0 = ------------------, h1 = ----------------------------,
-%                       8                             8
-%
-%     SQRT(2) SQRT(3) + 3 SQRT(2)       SQRT(2) SQRT(3) + SQRT(2)
-%h2 =---------------------------, h3 =-------------------------],
-%                 8                               8
-%
-%      SQRT(6) + SQRT(2)	      SQRT(2) SQRT(3) + 3 SQRT(2)
-%[h0 =-----------------, h1 =---------------------------,
-%              8                           8
-%
-%       SQRT(2) SQRT(3) - 3 SQRT(2)         SQRT(2) SQRT(3) - SQRT(2)
-%h2 = ----------------------------, h3 = --------------------------]]
-%                  8                                   8
-%\end{verbatim}
+
+  \item Solution using {\em Maxima}\texttrademark \hspace{1ex}(2 sets of solutions): \\
+  %\begin{minipage}{120mm}
+  \begin{lstlisting}[language=MuPAD,frame=single]
+    solve([h0+h1+h2+h3=sqrt(2),h0-h1+h2-h3=0,-h1+2*h2-3*h3=0,h0^2+h1^2+h2^2+h3^2=1],
+          [h0,h1,h2,h3]);
+  \end{lstlisting}
+  %\end{minipage}\\
+  \[\begin{array}{rcl}
+     \fh_0 &=& -\frac{\sqrt{6}- \sqrt{2}}{8} \\
+     \fh_1 &=& -\frac{\sqrt{6}-3\sqrt{2}}{8} \\
+     \fh_2 &=&  \frac{\sqrt{6}+3\sqrt{2}}{8} \\
+     \fh_3 &=&  \frac{\sqrt{6}+ \sqrt{2}}{8} \\
+    \end{array}
+    \hspace{2cm}
+    \begin{array}{rcl}
+     \fh_0 &=&  \frac{\sqrt{6}+ \sqrt{2}}{8} \\
+     \fh_1 &=&  \frac{\sqrt{6}+3\sqrt{2}}{8} \\
+     \fh_2 &=& -\frac{\sqrt{6}-3\sqrt{2}}{8} \\
+     \fh_3 &=& -\frac{\sqrt{6}- \sqrt{2}}{8}
+    \end{array}\]
+  %                SQRT(6) - SQRT(2)         SQRT(2) SQRT(3) - 3 SQRT(2)
+  %(%o36) [[h0 = ------------------, h1 = ----------------------------,
+  %                       8                             8
+  %
+  %     SQRT(2) SQRT(3) + 3 SQRT(2)       SQRT(2) SQRT(3) + SQRT(2)
+  %h2 =---------------------------, h3 =-------------------------],
+  %                 8                               8
+  %
+  %      SQRT(6) + SQRT(2)	      SQRT(2) SQRT(3) + 3 SQRT(2)
+  %[h0 =-----------------, h1 =---------------------------,
+  %              8                           8
+  %
+  %       SQRT(2) SQRT(3) - 3 SQRT(2)         SQRT(2) SQRT(3) - SQRT(2)
+  %h2 = ----------------------------, h3 = --------------------------]]
+  %                  8                                   8
+  %\end{verbatim}
+
+  \item This same wavelet system is identical to the \hie{Daubechies-$p2$} wavelet system
+        which is computed using a spectral factorization technique---\prefpp{ex:dau-p2}.
 \end{enumerate}
+
+
 \end{proof}
 
 
@@ -2655,206 +2661,206 @@ which is computed using a spectral factorization technique \xref{ex:dau-p3}.
 
 
 
+\newpage
+!!! We end this chapter with some simple wavelet design examples. !!!
+\begin{enumerate}
+\item Let $\spV_0$ be the space of all piecewise constant functions
+      on intervals $\set{[n,nb)}{n\in\Z}$.
 
-%%We end this chapter with some simple wavelet design examples.
-%\begin{enumerate}
-%\item Let $\spV_0$ be the space of all piecewise constant functions
-%      on intervals $\set{[n,nb)}{n\in\Z}$.
-%
-%\item The sequence $\{\spV_j\}$ is an MRA:
-%  \begin{enumerate}
-%  \item $\spV_j \subset \spV_{j+1}$
-%  \item $\ff(x)\in\spV_j \iff    \ff(t-2^{-j}n)\in\spV_j $
-%  \item $\ff(x)\in\spV_j \iff    \ff(2x)\in\spV_{j+1}$
-%  \item $\ds \bigcap_{j\in\Z} \spV_j = \{0\}$
-%  \item $\ds \cls{\bigcup_{j\in\Z} \spV_j} = \spLL $
-%  \item Riesz basis
-%
-%   {\color{figcolor} \begin{fsL} \begin{center}
-%   \setlength{\unitlength}{0.10mm}
-%   \begin{picture}(350,200)(-100,-50)
-%     %\graphpaper[10](0,0)(200,200)
-%     \thinlines
-%     \put(-100,   0){\line(1,0){300} }
-%     \put(   0,   5){\line(0,1){ 95} }
-%     \put(   0, 100){\line(1,0){ 95} }
-%     \put( 100,   0){\line(0,1){ 95} }
-%
-%     \put(  0,   0){\circle {10}}
-%     \put(  0, 100){\circle*{10}}
-%     \put(100,   0){\circle*{10}}
-%     \put(100, 100){\circle {10}}
-%
-%     \put( 210,   0){\makebox(0,0)[l]{$t$}}
-%     \put(-10,100){\makebox(0,0)[r]{$a$}}
-%     \put(0,-10){\makebox(0,0)[t]{$0$}}
-%     \put(100,-10){\makebox(0,0)[t]{$b$}}
-%     \put(120,50){\makebox(0,0)[l]{$\ftheta(x)$}}
-%   \end{picture}
-%   \end{center} \end{fsL} }
-%  \end{enumerate}
-%
-%\item Find orthonormal basis $\{\fphi(x-n)\}$ for $\spV_0$:
-%
-%The set $\{\ftheta(x-n)\}$ is already orthogonal.
-%To make it orthonormal, let $a=1/\sqrt{b}$. Then
-%  \begin{eqnarray*}
-%    \norm{\theta(x)}^2
-%      &=& \norm{a\setind_{[0,b)}}^2
-%       =  a^2 \norm{\setind_{[0,b)}}^2
-%       =  a^2 \int_{x\in\R} \setind_{[0,b)} \setind_{[0,b)} \dx
-%       =  a^2 \int_0^b \dx
-%       =  a^2 b
-%       =  1
-%  \end{eqnarray*}
-%   {\color{figcolor} \begin{fsL} \begin{center}
-%   \setlength{\unitlength}{0.10mm}
-%   \begin{picture}(350,200)(-100,-50)
-%     %\graphpaper[10](0,0)(200,200)
-%     \thinlines
-%     \put(-100,   0){\line(1,0){300} }
-%     \put(   0,   5){\line(0,1){ 95} }
-%     \put(   0, 100){\line(1,0){ 95} }
-%     \put( 100,   0){\line(0,1){ 95} }
-%
-%     \put(  0,   0){\circle {10}}
-%     \put(  0, 100){\circle*{10}}
-%     \put(100,   0){\circle*{10}}
-%     \put(100, 100){\circle {10}}
-%
-%     \put( 210,   0){\makebox(0,0)[l]{$t$}}
-%     \put(-10,100){\makebox(0,0)[r]{$\ds a=\frac{1}{\sqrt{b}}$}}
-%     \put(0,-10){\makebox(0,0)[t]{$0$}}
-%     \put(100,-10){\makebox(0,0)[t]{$b$}}
-%     \put(120,50){\makebox(0,0)[l]{$\fphi(x)$}}
-%   \end{picture}
-%   \end{center} \end{fsL} }
-%
-%\item Compute $\seqn{\fh_n}$:
-%From Proposition~\ref{prop:phi->h}
-%\begin{eqnarray*}
-%  \fh_{n}
-%    &=& \sqrt{2}            \inprod{\fphi(x)}{\fphi(2x-n)}
-%  \\&=& \sqrt{2}            \inprod{\frac{1}{\sqrt{b}}\setind_{[0,b)}(x)}{\frac{1}{\sqrt{b}}\setind_{[0,b)}(2x-n)}
-%  \\&=& \sqrt{2}\frac{1}{b} \inprod{\setind_{[0,b)}(x)}{\setind_{[0,b)}(2x-n)}
-%  \\&=& \sqrt{2}\frac{1}{b} \inprod{\setind_{[0,b)}(x)}{\setind_{[0,b)}(2x-n)}
-%  \\&=& \left\{\begin{array}{ll}
-%          \sqrt{2}\frac{1}{b} \frac{b}{2} &:n=0,1 \\
-%          0                               &:\text{otherwise.}
-%        \end{array}\right.
-%  \\&=& \left\{\begin{array}{ll}
-%          \cwt &:n=0,1 \\
-%          0                  &:\text{otherwise.}
-%        \end{array}\right.
-%\end{eqnarray*}
-%
-%   {\color{figcolor} \begin{center}\begin{fsL}
-%   \setlength{\unitlength}{0.10mm}
-%   \begin{picture}(400,440)(-180,-220)
-%     %\graphpaper[10](0,0)(200,200)
-%     \thinlines
-%     \put(-100,   0){\line(1,0){300} }
-%     \put( 210,   0){\makebox(0,0)[l]{$n$}}
-%
-%     \put(   0,   0){\line(0,1){71} }
-%     \put(   0,  71){\circle*{10} }
-%     \put( 100,   0){\line(0,1){71} }
-%     \put( 100,  71){\circle*{10} }
-%
-%     \multiput(-100,-100)(100,0){4}{\line(0,1){10} }
-%     \put(-100, -110){\makebox(0,0)[t]{$-1$}}
-%     \put(   0, -110){\makebox(0,0)[t]{$0$}}
-%     \put( 100, -110){\makebox(0,0)[t]{$1$}}
-%     \put( 200, -110){\makebox(0,0)[t]{$2$}}
-%
-%     \multiput(-140,-100)(0,25){9}{\line(1,0){10} }
-%     \put(-150, 100){\makebox(0,0)[r]{$1.00$}}
-%     \put(-150,  50){\makebox(0,0)[r]{$0.50$}}
-%     \put(-150,   0){\makebox(0,0)[r]{$0$}}
-%     \put(-150, -50){\makebox(0,0)[r]{$-0.50$}}
-%     \put(-150,-100){\makebox(0,0)[r]{$-1.00$}}
-%   \end{picture}
-%   \end{fsL}\end{center}}
-%
-%
-%
-%\item Compute $\seqn{\fg_n}$:
-%From \pref{thm:ortho_qmr}
-%\begin{eqnarray*}
-%  \fg_{n}
-%    &=& \pm (-1)^n  h(\xN-n)
-%  \\&=& (-1)^n  h(1-n)
-%  \\&=& \left\{\begin{array}{ll}
-%          +\cwt &:n=0 \\
-%          -\cwt &:n=1 \\
-%          0                  &:\text{otherwise.}
-%        \end{array}\right.
-%\end{eqnarray*}
-%
-%   {\color{figcolor} \begin{center}\begin{fsL}
-%   \setlength{\unitlength}{0.10mm}
-%   \begin{picture}(400,440)(-180,-220)
-%     %\graphpaper[10](0,0)(200,200)
-%     \thinlines
-%     \put(-100,   0){\line(1,0){300} }
-%     \put( 210,   0){\makebox(0,0)[l]{$n$}}
-%
-%     \put(   0,   0){\line(0,1){71} }
-%     \put(   0,  71){\circle*{10} }
-%     \put( 100,   0){\line(0,-1){71} }
-%     \put( 100, -71){\circle*{10} }
-%
-%     \multiput(-100,-100)(100,0){4}{\line(0,1){10} }
-%     \put(-100, -110){\makebox(0,0)[t]{$-1$}}
-%     \put(   0, -110){\makebox(0,0)[t]{$0$}}
-%     \put( 100, -110){\makebox(0,0)[t]{$1$}}
-%     \put( 200, -110){\makebox(0,0)[t]{$2$}}
-%
-%     \multiput(-140,-100)(0,25){9}{\line(1,0){10} }
-%     \put(-150, 100){\makebox(0,0)[r]{$1.00$}}
-%     \put(-150,  50){\makebox(0,0)[r]{$0.50$}}
-%     \put(-150,   0){\makebox(0,0)[r]{$0$}}
-%     \put(-150, -50){\makebox(0,0)[r]{$-0.50$}}
-%     \put(-150,-100){\makebox(0,0)[r]{$-1.00$}}
-%   \end{picture}
-%   \end{fsL}\end{center}}
-%
-%\item Compute $\fpsi(x)$:
-%\begin{eqnarray*}
-%  \fpsi(x)
-%    &=& \sqrt{2} \sum_{n\in\Z} \fg_{n}  \fphi(2x-n)
-%  \\&=& \sqrt{2} \left[\cwt \fphi(2x-0)-\cwt \fphi(2x-1)\right]
-%  \\&=& \fphi(2x)-\fphi(2x-1)
-%\end{eqnarray*}
-%
-%   {\color{figcolor} \begin{fsL} \begin{center}
-%   \setlength{\unitlength}{0.10mm}
-%   \begin{picture}(350,300)(-100,-150)
-%     %\graphpaper[10](0,0)(200,200)
-%     \thinlines
-%     \put(-100,   0){\line(1,0){300} }
-%     \put(   0,   5){\line(0,1){ 95} }
-%     \put(   0, 100){\line(1,0){ 45} }
-%     \put(  50,-100){\line(0,1){195} }
-%     \put(  50,-100){\line(1,0){ 45} }
-%     \put( 100,- 95){\line(0,1){100} }
-%
-%     \put(  0,   0){\circle {10}}
-%     \put(  0, 100){\circle*{10}}
-%     \put( 50, 100){\circle {10}}
-%     \put( 50,-100){\circle*{10}}
-%     \put(100,   0){\circle*{10}}
-%     \put(100,-100){\circle {10}}
-%
-%     \put( 210,   0){\makebox(0,0)[l]{$t$}}
-%     \put(-20, 100){\makebox(0,0)[r]{$\ds  \frac{1}{\sqrt{b}}$}}
-%     \put(-20,-100){\makebox(0,0)[r]{$\ds -\frac{1}{\sqrt{b}}$}}
-%     \put(0,-10){\makebox(0,0)[t]{$0$}}
-%     \put(100,10){\makebox(0,0)[b]{$b$}}
-%     \put( 70,70){\makebox(0,0)[l]{$\fpsi(x)$}}
-%   \end{picture}
-%   \end{center} \end{fsL} }
-%\end{enumerate}
+\item The sequence $\{\spV_j\}$ is an MRA:
+  \begin{enumerate}
+  \item $\spV_j \subset \spV_{j+1}$
+  \item $\ff(x)\in\spV_j \iff    \ff(t-2^{-j}n)\in\spV_j $
+  \item $\ff(x)\in\spV_j \iff    \ff(2x)\in\spV_{j+1}$
+  \item $\ds \bigcap_{j\in\Z} \spV_j = \{0\}$
+  \item $\ds \cls{\bigcup_{j\in\Z} \spV_j} = \spLL $
+  \item Riesz basis
+
+   {\color{figcolor} \begin{fsL} \begin{center}
+   \setlength{\unitlength}{0.10mm}
+   \begin{picture}(350,200)(-100,-50)
+     %\graphpaper[10](0,0)(200,200)
+     \thinlines
+     \put(-100,   0){\line(1,0){300} }
+     \put(   0,   5){\line(0,1){ 95} }
+     \put(   0, 100){\line(1,0){ 95} }
+     \put( 100,   0){\line(0,1){ 95} }
+
+     \put(  0,   0){\circle {10}}
+     \put(  0, 100){\circle*{10}}
+     \put(100,   0){\circle*{10}}
+     \put(100, 100){\circle {10}}
+
+     \put( 210,   0){\makebox(0,0)[l]{$t$}}
+     \put(-10,100){\makebox(0,0)[r]{$a$}}
+     \put(0,-10){\makebox(0,0)[t]{$0$}}
+     \put(100,-10){\makebox(0,0)[t]{$b$}}
+     \put(120,50){\makebox(0,0)[l]{$\ftheta(x)$}}
+   \end{picture}
+   \end{center} \end{fsL} }
+  \end{enumerate}
+
+\item Find orthonormal basis $\{\fphi(x-n)\}$ for $\spV_0$:
+
+The set $\{\ftheta(x-n)\}$ is already orthogonal.
+To make it orthonormal, let $a=1/\sqrt{b}$. Then
+  \begin{eqnarray*}
+    \norm{\theta(x)}^2
+      &=& \norm{a\setind_{[0,b)}}^2
+       =  a^2 \norm{\setind_{[0,b)}}^2
+       =  a^2 \int_{x\in\R} \setind_{[0,b)} \setind_{[0,b)} \dx
+       =  a^2 \int_0^b \dx
+       =  a^2 b
+       =  1
+  \end{eqnarray*}
+   {\color{figcolor} \begin{fsL} \begin{center}
+   \setlength{\unitlength}{0.10mm}
+   \begin{picture}(350,200)(-100,-50)
+     %\graphpaper[10](0,0)(200,200)
+     \thinlines
+     \put(-100,   0){\line(1,0){300} }
+     \put(   0,   5){\line(0,1){ 95} }
+     \put(   0, 100){\line(1,0){ 95} }
+     \put( 100,   0){\line(0,1){ 95} }
+
+     \put(  0,   0){\circle {10}}
+     \put(  0, 100){\circle*{10}}
+     \put(100,   0){\circle*{10}}
+     \put(100, 100){\circle {10}}
+
+     \put( 210,   0){\makebox(0,0)[l]{$t$}}
+     \put(-10,100){\makebox(0,0)[r]{$\ds a=\frac{1}{\sqrt{b}}$}}
+     \put(0,-10){\makebox(0,0)[t]{$0$}}
+     \put(100,-10){\makebox(0,0)[t]{$b$}}
+     \put(120,50){\makebox(0,0)[l]{$\fphi(x)$}}
+   \end{picture}
+   \end{center} \end{fsL} }
+
+\item Compute $\seqn{\fh_n}$:
+From Proposition~\ref{prop:phi->h}
+\begin{eqnarray*}
+  \fh_{n}
+    &=& \sqrt{2}            \inprod{\fphi(x)}{\fphi(2x-n)}
+  \\&=& \sqrt{2}            \inprod{\frac{1}{\sqrt{b}}\setind_{[0,b)}(x)}{\frac{1}{\sqrt{b}}\setind_{[0,b)}(2x-n)}
+  \\&=& \sqrt{2}\frac{1}{b} \inprod{\setind_{[0,b)}(x)}{\setind_{[0,b)}(2x-n)}
+  \\&=& \sqrt{2}\frac{1}{b} \inprod{\setind_{[0,b)}(x)}{\setind_{[0,b)}(2x-n)}
+  \\&=& \left\{\begin{array}{ll}
+          \sqrt{2}\frac{1}{b} \frac{b}{2} &:n=0,1 \\
+          0                               &:\text{otherwise.}
+        \end{array}\right.
+  \\&=& \left\{\begin{array}{ll}
+          \cwt &:n=0,1 \\
+          0                  &:\text{otherwise.}
+        \end{array}\right.
+\end{eqnarray*}
+
+   {\color{figcolor} \begin{center}\begin{fsL}
+   \setlength{\unitlength}{0.10mm}
+   \begin{picture}(400,440)(-180,-220)
+     %\graphpaper[10](0,0)(200,200)
+     \thinlines
+     \put(-100,   0){\line(1,0){300} }
+     \put( 210,   0){\makebox(0,0)[l]{$n$}}
+
+     \put(   0,   0){\line(0,1){71} }
+     \put(   0,  71){\circle*{10} }
+     \put( 100,   0){\line(0,1){71} }
+     \put( 100,  71){\circle*{10} }
+
+     \multiput(-100,-100)(100,0){4}{\line(0,1){10} }
+     \put(-100, -110){\makebox(0,0)[t]{$-1$}}
+     \put(   0, -110){\makebox(0,0)[t]{$0$}}
+     \put( 100, -110){\makebox(0,0)[t]{$1$}}
+     \put( 200, -110){\makebox(0,0)[t]{$2$}}
+
+     \multiput(-140,-100)(0,25){9}{\line(1,0){10} }
+     \put(-150, 100){\makebox(0,0)[r]{$1.00$}}
+     \put(-150,  50){\makebox(0,0)[r]{$0.50$}}
+     \put(-150,   0){\makebox(0,0)[r]{$0$}}
+     \put(-150, -50){\makebox(0,0)[r]{$-0.50$}}
+     \put(-150,-100){\makebox(0,0)[r]{$-1.00$}}
+   \end{picture}
+   \end{fsL}\end{center}}
+
+
+
+\item Compute $\seqn{\fg_n}$:
+From \pref{thm:ortho_qmr}
+\begin{eqnarray*}
+  \fg_{n}
+    &=& \pm (-1)^n  h(\xN-n)
+  \\&=& (-1)^n  h(1-n)
+  \\&=& \left\{\begin{array}{ll}
+          +\cwt &:n=0 \\
+          -\cwt &:n=1 \\
+          0                  &:\text{otherwise.}
+        \end{array}\right.
+\end{eqnarray*}
+
+   {\color{figcolor} \begin{center}\begin{fsL}
+   \setlength{\unitlength}{0.10mm}
+   \begin{picture}(400,440)(-180,-220)
+     %\graphpaper[10](0,0)(200,200)
+     \thinlines
+     \put(-100,   0){\line(1,0){300} }
+     \put( 210,   0){\makebox(0,0)[l]{$n$}}
+
+     \put(   0,   0){\line(0,1){71} }
+     \put(   0,  71){\circle*{10} }
+     \put( 100,   0){\line(0,-1){71} }
+     \put( 100, -71){\circle*{10} }
+
+     \multiput(-100,-100)(100,0){4}{\line(0,1){10} }
+     \put(-100, -110){\makebox(0,0)[t]{$-1$}}
+     \put(   0, -110){\makebox(0,0)[t]{$0$}}
+     \put( 100, -110){\makebox(0,0)[t]{$1$}}
+     \put( 200, -110){\makebox(0,0)[t]{$2$}}
+
+     \multiput(-140,-100)(0,25){9}{\line(1,0){10} }
+     \put(-150, 100){\makebox(0,0)[r]{$1.00$}}
+     \put(-150,  50){\makebox(0,0)[r]{$0.50$}}
+     \put(-150,   0){\makebox(0,0)[r]{$0$}}
+     \put(-150, -50){\makebox(0,0)[r]{$-0.50$}}
+     \put(-150,-100){\makebox(0,0)[r]{$-1.00$}}
+   \end{picture}
+   \end{fsL}\end{center}}
+
+\item Compute $\fpsi(x)$:
+\begin{eqnarray*}
+  \fpsi(x)
+    &=& \sqrt{2} \sum_{n\in\Z} \fg_{n}  \fphi(2x-n)
+  \\&=& \sqrt{2} \brs{\cwt \fphi(2x-0)-\cwt \fphi(2x-1)}
+  \\&=& \fphi(2x)-\fphi(2x-1)
+\end{eqnarray*}
+
+   {\color{figcolor} \begin{fsL} \begin{center}
+   \setlength{\unitlength}{0.10mm}
+   \begin{picture}(350,300)(-100,-150)
+     %\graphpaper[10](0,0)(200,200)
+     \thinlines
+     \put(-100,   0){\line(1,0){300} }
+     \put(   0,   5){\line(0,1){ 95} }
+     \put(   0, 100){\line(1,0){ 45} }
+     \put(  50,-100){\line(0,1){195} }
+     \put(  50,-100){\line(1,0){ 45} }
+     \put( 100,- 95){\line(0,1){100} }
+
+     \put(  0,   0){\circle {10}}
+     \put(  0, 100){\circle*{10}}
+     \put( 50, 100){\circle {10}}
+     \put( 50,-100){\circle*{10}}
+     \put(100,   0){\circle*{10}}
+     \put(100,-100){\circle {10}}
+
+     \put( 210,   0){\makebox(0,0)[l]{$t$}}
+     \put(-20, 100){\makebox(0,0)[r]{$\ds  \frac{1}{\sqrt{b}}$}}
+     \put(-20,-100){\makebox(0,0)[r]{$\ds -\frac{1}{\sqrt{b}}$}}
+     \put(0,-10){\makebox(0,0)[t]{$0$}}
+     \put(100,10){\makebox(0,0)[b]{$b$}}
+     \put( 70,70){\makebox(0,0)[l]{$\fpsi(x)$}}
+   \end{picture}
+   \end{center} \end{fsL} }
+\end{enumerate}
 
 
 
