--- a/common/wavelets/vanish.tex
+++ b/common/wavelets/vanish.tex
@@ -287,7 +287,7 @@ Let $\Dh(\omega)$ and $\Dg(\omega)$ be the \ope{DTFT}s \xref{def:dtft} of $\seqn
        \mcom{\inprod{\fpsi(x)}{x^n}=0}{(1) \prope{$n$th vanishing moment}}
          &\iff&         \left.\opddwn  \Dg(\omega)\right|_{\omega=0}     &=& 0 & (2)
        \\&\iff&         \left.\opddwn  \Dh(\omega)\right|_{\omega=\pi}   &=& 0 & (3)
-       \\&\iff&         \sum_{k\in\Z} (-1)^k k^n  h_k                    &=& 0 & (4)
+       \\&\iff&         \sum_{k\in\Z} (-1)^k k^n  \fh_k                    &=& 0 & (4)
        \\&\iff&         \sum_{k\in\Z} k^n  g_k                           &=& 0 & (5)
   \end{array}}
   \qquad\scy\forall n\in\Znn$
@@ -1051,9 +1051,9 @@ Let $\wavsys$ be a \structe{wavelet system}.
             \\  0 & -1 &  2
           \end{array}}
           \brs{\begin{array}{l}
-               h_0
-            \\ h_1
-            \\ h_2
+               \fh_0
+            \\ \fh_1
+            \\ \fh_2
           \end{array}}
           &= \brs{\begin{array}{l}
                   \sqrt{2}
@@ -1062,7 +1062,7 @@ Let $\wavsys$ be a \structe{wavelet system}.
              \end{array}}
         \end{align*}
 
-      \item Solution for $\brs{\begin{array}{ccc} h_0 & h_1 & h_2\end{array}}^T$:
+      \item Solution for $\brs{\begin{array}{ccc} \fh_0 & \fh_1 & \fh_2\end{array}}^T$:
         \begin{align*}
           \brs{\begin{array}{rrc|l}
                 1 &  1 &  1 & \sqrt{2}
@@ -1101,9 +1101,9 @@ Let $\wavsys$ be a \structe{wavelet system}.
           \end{array}}
           &&\implies
           \brs{\begin{array}{l}
-               h_0
-            \\ h_1
-            \\ h_2
+               \fh_0
+            \\ \fh_1
+            \\ \fh_2
           \end{array}}
           =
           \frac{\sqrt{2}}{4}\brs{\begin{array}{l}
@@ -1137,7 +1137,7 @@ Let $\wavsys$ be a \structe{wavelet system}.
     \\(2). & \prope{admissibility condition}     & \xref{thm:admiss}       & and
     \\(3). & \prope{partition of unity} /        & \xref{thm:pun_zero}     & and
     \\(4). & \prope{vanishing 1st moment}        & \xref{thm:gh_cqf}       & and
-    \\(4). & \prope{vanishing 2nd moment}        & \xref{thm:gh_cqf}       &
+    \\(5). & \prope{vanishing 2nd moment}        & \xref{thm:gh_cqf}       &
   \end{array}}
   \implies
   \brb{\begin{array}{c|r}
@@ -1236,10 +1236,10 @@ Let $\wavsys$ be a \structe{wavelet system}.
           \\
           \implies&
           \brs{\begin{array}{l}
-               h_0
-            \\ h_1
-            \\ h_2
-            \\ h_3
+               \fh_0
+            \\ \fh_1
+            \\ \fh_2
+            \\ \fh_3
           \end{array}}
           =
           \frac{\sqrt{2}}{8}\brs{\begin{array}{l}
@@ -1263,6 +1263,171 @@ Let $\wavsys$ be a \structe{wavelet system}.
 \end{enumerate}
 \end{proof}
 
+%--------------------------------------
+\begin{example}[\exmd{5 coefficients and 4 vanishing moments}]
+%\footnote{
+%  \citerp{strang89}{616}
+%  }
+%\label{ex:pun_n=3}
+%\label{ex:sw_gh_bspline}
+%\exmx{B-spline}
+%--------------------------------------
+Let $\wavsys$ be a \structe{wavelet system}.
+\exbox{
+  \brb{\begin{array}{FMMD}
+      (1). & $\support\fphi(x)=\intcc{0}{3}$     & \xref{thm:mra_support}  & and
+    \\(2). & \prope{admissibility condition}     & \xref{thm:admiss}       & and
+    \\(3). & \prope{partition of unity} /        & \xref{thm:pun_zero}     & and
+    \\(4). & \prope{vanishing 1st moment}        & \xref{thm:gh_cqf}       & and
+    \\(5). & \prope{vanishing 2nd moment}        & \xref{thm:gh_cqf}       & and
+    \\(6). & \prope{vanishing 3rd moment}        & \xref{thm:gh_cqf}       &
+  \end{array}}
+  \implies
+  \brb{\begin{array}{c|r}
+      n            & \fh_{n}
+    \\\hline
+      0            & \frac{\sqrt{2}}{16}\cdot1
+    \\1            & \frac{\sqrt{2}}{16}\cdot4
+    \\2            & \frac{\sqrt{2}}{16}\cdot6
+    \\3            & \frac{\sqrt{2}}{16}\cdot4
+    \\4            & \frac{\sqrt{2}}{16}\cdot1
+    \\\text{other} & 0
+  \end{array}}
+  }
+\\\indentx\tbox{\includegraphics{../common/math/graphics/pdfs/n3_pz.pdf}}
+\\\indentx\tbox{\includegraphics{../common/math/graphics/pdfs/n3_h.pdf}}
+  \indentx\tbox{\includegraphics{../common/math/graphics/pdfs/b3_g.pdf}}
+\end{example}
+\begin{proof}
+\begin{enumerate}
+  \item Proof that (1) $\implies$ that only $\fh_0$, $\fh_1$, $\cdots$, $\fh_4$ are non-zero: by \prefp{thm:mra_support}.
+  \item Proof solving a system of equations:
+    \begin{enumerate}
+      \item System of Equations:
+            \\\indentx$\ds\begin{array}{rcl MM}
+               \fh_0 +\fh_1 +  \fh_2 +  \fh_3 +   \fh_4 &=& \sqrt{2} & (\prope{admissibility})        & \xref{thm:admiss}
+            \\ \fh_0 -\fh_1 +  \fh_2 -  \fh_3 +   \fh_4 &=& 0        & (\prope{partition of unity})   & \xref{thm:pun_zero}
+            \\0\fh_0 -\fh_1 + 2\fh_2 - 3\fh_3 +  4\fh_4 &=& 0        & (\prope{vanishing 1st moment}) & \xref{thm:gh_cqf}
+            \\0\fh_0 -\fh_1 + 4\fh_2 - 9\fh_3 + 16\fh_4 &=& 0        & (\prope{vanishing 2nd moment}) & \xref{thm:gh_cqf}
+            \\0\fh_0 -\fh_1 + 8\fh_2 -27\fh_3 + 64\fh_4 &=& 0        & (\prope{vanishing 3rd moment}) & \xref{thm:gh_cqf}
+            \end{array}$
+
+      \item System of Equations in Linear/Matrix Algebra form:
+        \begin{align*}
+          \brs{\begin{array}{rrrrr}
+                1 &  1 &  1  &   1  &  1
+            \\  1 & -1 &  1  &  -1  &  1
+            \\  0 & -1 &  2  &  -3  &  4
+            \\  0 & -1 &  4  &  -9  & 16
+            \\  0 & -1 &  8  & -27  & 64
+          \end{array}}
+          \brs{\begin{array}{l}
+               \fh_0
+            \\ \fh_1
+            \\ \fh_2
+            \\ \fh_3
+            \\ \fh_4
+          \end{array}}
+          &= \brs{\begin{array}{c}
+                  \sqrt{2}
+               \\ 0
+               \\ 0
+               \\ 0
+               \\ 0
+             \end{array}}
+        \end{align*}
+
+      \item Solution for $\brs{\begin{array}{ccccc} \fh_0 & \fh_1 & \fh_2 & \fh_3 & \fh_4\end{array}}^T$:
+        \begin{align*}
+          \brs{\begin{array}{rrrrr|c}
+                1 &  1 &  1  &   1  &  1 & \sqrt{2}
+            \\  1 & -1 &  1  &  -1  &  1 & 0
+            \\  0 & -1 &  2  &  -3  &  4 & 0
+            \\  0 & -1 &  4  &  -9  & 16 & 0
+            \\  0 & -1 &  8  & -27  & 64 & 0
+          \end{array}}
+          &\rightarrow
+          \brs{\begin{array}{rrrrr|c}
+                0 &  2 &  0  &   2  &  0 & \sqrt{2}
+            \\  1 &  0 & -1  &   2  & -3 & 0
+            \\  0 &  1 & -2  &   3  & -4 & 0
+            \\  0 &  0 &  2  &  -6  & 12 & 0
+            \\  0 &  0 &  4  & -18  & 48 & 0
+          \end{array}}
+          \rightarrow
+          \\
+          \brs{\begin{array}{rrrrr|c}
+                0 &  0 &  4  &  -4  &  8 & \sqrt{2}
+            \\  1 &  0 & -1  &   2  & -3 & 0
+            \\  0 &  1 &  0  &  -3  &  8 & 0
+            \\  0 &  0 &  1  &  -3  &  6 & 0
+            \\  0 &  0 &  0  &  -6  & 24 & 0
+          \end{array}}
+          &\rightarrow
+          \brs{\begin{array}{rrrrr|c}
+                0 &  0 &  0  &   8  & -16 & \sqrt{2}
+            \\  1 &  0 &  0  &  -1  &   3 & 0
+            \\  0 &  1 &  0  &  -3  &   8 & 0
+            \\  0 &  0 &  1  &  -3  &   6 & 0
+            \\  0 &  0 &  0  &   1  &  -4 & 0
+          \end{array}}
+          \rightarrow
+          \\
+          \brs{\begin{array}{rrrrr|c}
+                0 &  0 &  0  &   0  &  16 & \sqrt{2}
+            \\  1 &  0 &  0  &   0  &  -1 & 0
+            \\  0 &  1 &  0  &   0  &  -4 & 0
+            \\  0 &  0 &  1  &   0  &  -6 & 0
+            \\  0 &  0 &  0  &   1  &  -4 & 0
+          \end{array}}
+          &\rightarrow
+          \brs{\begin{array}{rrrrr|c}
+                0 &  0 &  0  &   0  &   1 & \frac{\sqrt{2}}{16}\cdot1
+            \\  1 &  0 &  0  &   0  &   0 & \frac{\sqrt{2}}{16}\cdot1
+            \\  0 &  1 &  0  &   0  &   0 & \frac{\sqrt{2}}{16}\cdot4
+            \\  0 &  0 &  1  &   0  &   0 & \frac{\sqrt{2}}{16}\cdot6
+            \\  0 &  0 &  0  &   1  &   0 & \frac{\sqrt{2}}{16}\cdot4
+          \end{array}}
+          &&\implies
+          \brs{\begin{array}{l}
+               \fh_0
+            \\ \fh_1
+            \\ \fh_2
+            \\ \fh_3
+            \\ \fh_4
+          \end{array}}
+          &=
+          \frac{\sqrt{2}}{16}\brs{\begin{array}{l}
+                  1
+               \\ 4
+               \\ 6
+               \\ 4
+               \\ 1
+          \end{array}}
+        \end{align*}
+
+  \item Proof using \prefpp{lem:van_factor} (and placing four zeros at $z=-1$):
+    \begin{align*}
+      \Zh(z)
+        &= \sqrt{2}\brs{\frac{(z+1)^4} {(1+1)^4 z^4}}
+      \\&= \frac{\sqrt{2}}{2^4}\brs{\frac{\sum_{n=0}^4 \bcoef{4}{n}z^n} {z^4}}
+        && \text{by \thme{Binomial Theorem} \ifxref{polynom}{thm:binomial}}
+      \\&= \frac{\sqrt{2}}{16} \brs{\frac{z^4 + 4z^3 + 6z^2 + 4z^ + 1}{z^4} }
+        && \text{by definition of $\bcoef{n}{k}$ \ifxref{binomial}{def:bcoef}}
+      \\&= \frac{\sqrt{2}}{16} \brs{ 1 + 4z^{-1} + 6z^{-2} + 4z^{-3} + 1z^{-4}}
+    \end{align*}
+          \\\indentx$\brp{\begin{array}{c|*{9}{c}}
+              n=0: &   &   &   &   & 1 &   &   &   &
+            \\n=1: &   &   &   & 1 &   & 1 &   &   &
+            \\n=2: &   &   & 1 &   & 2 &   & 1 &   &
+            \\n=3: &   & 1 &   & 3 &   & 3 &   & 1 &
+            \\n=4: & 1 &   & 4 &   & 6 &   & 4 &   & 1
+          \end{array}}$
+    \end{enumerate}
+\end{enumerate}
+\end{proof}
+
+
 %Examples of wavelets with $p$ vanishing moments include the B-spline wavelets and the Daubechies-$p$ wavelets.
 %
 %\begin{tabular}{|>{\scs}rlcll|}
@@ -1283,19 +1448,19 @@ Let $\wavsys$ be a \structe{wavelet system}.
 %
 
 %\[\begin{array}{llcllll}
-%  1. & \ds\sum_{n\in\Z}  h_n   &=& \sqrt{2}
+%  1. & \ds\sum_{n\in\Z}  \fh_n   &=& \sqrt{2}
 %     & \text{(admissiblility condition)}
 %     & \text{\pref{thm:admiss}}
 %     & \text{page~\pageref{thm:admiss}}
 %\\
 %\\
-%  2. & \ds\sum_{m\in\Z} h_m \fh^\ast_{m-2n} &=& \kdelta_n
+%  2. & \ds\sum_{m\in\Z} \fh_m \fh^\ast_{m-2n} &=& \kdelta_n
 %     & \text{(quadrature condition)}
 %     & \text{\pref{thm:quadcon}}
 %     & \text{page~\pageref{thm:quadcon}}
 %\\
 %\\
-%  3. & \ds\sum_{m\in\Z} (-1)^m m^p  h_m   &=& 0
+%  3. & \ds\sum_{m\in\Z} (-1)^m m^p  \fh_m   &=& 0
 %     & \text{(vanishing $p$th moment)}
 %     & \text{\pref{thm:vanish}}
 %     & \text{page~\pageref{thm:vanish}}
@@ -1370,7 +1535,7 @@ Let $\wavsys$ be a \structe{wavelet system}.
 %and ``\hie{discrete Fourier transforms}"
 %\[ \begin{array}{rcl cl @{\qquad}l}
 %     \Dh(\omega) &\eqd& \inproda{\fphi(x)}{\fkern{n}{\omega}}
-%                 &\eqd& \sum_{n\in\Z} h_n \fkernea{n}{\omega}
+%                 &\eqd& \sum_{n\in\Z} \fh_n \fkernea{n}{\omega}
 %                 &      n \in\Z
 %     \\
 %     \Dg(\omega) &\eqd& \inproda{\fpsi(x)}{\fkern{n}{\omega}}
@@ -1395,15 +1560,15 @@ Let $\wavsys$ be a \structe{wavelet system}.
 %     $\Fphi(\omega)=\cwt  \Dh\left(\frac{\omega}{2}\right)\Fphi\left(\frac{\omega}{2}\right)$:}
 %   \opF\vphi
 %     &= \inprod{\vphi}{\fkern{x}{\omega}}
-%   \\&= \inprod{\sum_{n\in\Z}  h_n  \opT^n\opD\vphi}{\fkern{x}{\omega}}
+%   \\&= \inprod{\sum_{n\in\Z}  \fh_n  \opT^n\opD\vphi}{\fkern{x}{\omega}}
 %     && \text{by dilation equation \prefpo{thm:dilation_eq}}
-%   \\&= \sum_{n\in\Z}  h_n \inprod{\opT^n\opD\vphi}{\fkern{x}{\omega}}
+%   \\&= \sum_{n\in\Z}  \fh_n \inprod{\opT^n\opD\vphi}{\fkern{x}{\omega}}
 %     && \text{by definition of $\inprod{\cdot}{\cdot}$ \prefpo{def:inprod}}
-%   \\&= \sum_{n\in\Z}  h_n \inprod{\vphi}{\left(\opT^n\opD\right)^\ast \fkern{x}{\omega}}
+%   \\&= \sum_{n\in\Z}  \fh_n \inprod{\vphi}{\left(\opT^n\opD\right)^\ast \fkern{x}{\omega}}
 %     && \text{by definition of operator adjoint \prefpo{def:op_adj}}
-%   \\&= \sum_{n\in\Z}  h_n \inprod{\vphi}{\cwt \fkern{n}{\frac{1}{2}\omega}\fkern{x}{\frac{1}{2}\omega}}
+%   \\&= \sum_{n\in\Z}  \fh_n \inprod{\vphi}{\cwt \fkern{n}{\frac{1}{2}\omega}\fkern{x}{\frac{1}{2}\omega}}
 %     && \text{by \prefp{lem:TDk}}
-%   \\&= \sum_{n\in\Z}  h_n  \;
+%   \\&= \sum_{n\in\Z}  \fh_n  \;
 %        \cwt  \;
 %        \fkernea{n}{\frac{1}{2}\omega} \;
 %        \inprod{\vphi}{\fkern{x}{\frac{1}{2}\omega}}
@@ -1417,7 +1582,7 @@ Let $\wavsys$ be a \structe{wavelet system}.
 %\\
 %   \intertext{\ding{"C1} Proof that
 %     $\Fpsi(\omega)=\cwt  \Dg\left(\frac{\omega}{2}\right)\Fphi\left(\frac{\omega}{2}\right)$:
-%     essentially same as above but substitute $g_n$ for $h_n$.
+%     essentially same as above but substitute $g_n$ for $\fh_n$.
 %     }
 %\\
 %   \intertext{\ding{"C2} Proof that
@@ -1448,28 +1613,28 @@ Let $\wavsys$ be a \structe{wavelet system}.
 %\end{align*}
 %\end{proof}
 
-\begin{figure}
-  \centering%
-  $\begin{array}{|*{3}{>{\ds}c|}}
-     \hline
-      \includegraphics{../common/math/graphics/pdfs/n0_h.pdf}
-     &\includegraphics{../common/math/graphics/pdfs/n1_h.pdf}
-     &\includegraphics{../common/math/graphics/pdfs/n2_h.pdf}
-    %&\includegraphics{../common/math/graphics/pdfs/bspline_phi_h.pdf}
-     \\
-      \fN_0(x) %= \sqrt{2}\sum_{k=0}^1 \brp{\frac{1}{\sqrt{2}}\bcoef{1}{k}} \fN_0(2x-k)
-     &\fN_1(x) %= \sqrt{2}\sum_{k=0}^2 \brp{\frac{1}{\sqrt{2}}\bcoef{2}{k}} \fN_1(2x-k)
-     &\fN_2(x) %= \sqrt{2}\sum_{k=0}^2 \brp{\frac{1}{\sqrt{2}}\bcoef{2}{k}} \fN_1(2x-k)
-     \\\hline
-       \mc{2}{|c|}{\includegraphics{../common/math/graphics/pdfs/n3_h.pdf}}
-      &\includegraphics{../common/math/graphics/pdfs/n4_h.pdf}
-     \\
-       \mc{2}{|c|}{\fN_3(x)} %= \sqrt{2}\sum_{k=0}^4 \brp{\frac{1}{\sqrt{2}}\bcoef{4}{k}} \fN_3(2x-k)
-      &\fN_4(x)
-     \\\hline
-  \end{array}$
-  \caption{Some B-splines \label{fig:partuni_Nde}}
-\end{figure}
+%\begin{figure}
+%  \centering%
+%  $\begin{array}{|*{3}{>{\ds}c|}}
+%     \hline
+%      \includegraphics{../common/math/graphics/pdfs/n0_h.pdf}
+%     &\includegraphics{../common/math/graphics/pdfs/n1_h.pdf}
+%     &\includegraphics{../common/math/graphics/pdfs/n2_h.pdf}
+%    %&\includegraphics{../common/math/graphics/pdfs/bspline_phi_h.pdf}
+%     \\
+%      \fN_0(x) %= \sqrt{2}\sum_{k=0}^1 \brp{\frac{1}{\sqrt{2}}\bcoef{1}{k}} \fN_0(2x-k)
+%     &\fN_1(x) %= \sqrt{2}\sum_{k=0}^2 \brp{\frac{1}{\sqrt{2}}\bcoef{2}{k}} \fN_1(2x-k)
+%     &\fN_2(x) %= \sqrt{2}\sum_{k=0}^2 \brp{\frac{1}{\sqrt{2}}\bcoef{2}{k}} \fN_1(2x-k)
+%     \\\hline
+%       \mc{2}{|c|}{\includegraphics{../common/math/graphics/pdfs/n3_h.pdf}}
+%      &\includegraphics{../common/math/graphics/pdfs/n4_h.pdf}
+%     \\
+%       \mc{2}{|c|}{\fN_3(x)} %= \sqrt{2}\sum_{k=0}^4 \brp{\frac{1}{\sqrt{2}}\bcoef{4}{k}} \fN_3(2x-k)
+%      &\fN_4(x)
+%     \\\hline
+%  \end{array}$
+%  \caption{Some B-splines \label{fig:partuni_Nde}}
+%\end{figure}
 %As it turns out, all \structe{B-splines} satisfy the \prope{partition of unity} property \xref{thm:bspline_punity}
 %\emph{and} the \prope{multi-resolution} property \xref{thm:bspline_2x}.
 %See \pref{ex:pun_n=2} (next), \prefpp{app:bspline}, and \prefpp{fig:partuni_Nde} for examples.
@@ -1511,52 +1676,3 @@ Let $\wavsys$ be a \structe{wavelet system}.
 %\end{enumerate}
 %\end{proof}
 %
-%--------------------------------------
-\begin{example}[\exm{order 3 B-spline wavelet system}]
-\footnote{
-  \citerp{strang89}{616}
-  }
-\label{ex:sw_gh_bspline}
-\exmx{B-spline}
-%--------------------------------------
-The following figures illustrate scaling and wavelet coefficients and functions
-for a \hie{B-spline}.
-\\\exbox{\begin{array}{m{40mm}m{51mm}m{51mm}}
-  $\begin{array}{>{\scy}c|c|r}
-    n & \mc{1}{c}{h_n} & \mc{1}{c}{g_n} \\
-    \hline
-      0   & { }\brp{\frac{\sqrt{2}}{16}}  &  { }\brp{\frac{\sqrt{2}}{16}}  \\
-      1   & {4}\brp{\frac{\sqrt{2}}{16}}  & -{4}\brp{\frac{\sqrt{2}}{16}}  \\
-      2   & {6}\brp{\frac{\sqrt{2}}{16}}  &  {6}\brp{\frac{\sqrt{2}}{16}}  \\
-      3   & {4}\brp{\frac{\sqrt{2}}{16}}  & -{4}\brp{\frac{\sqrt{2}}{16}}  \\
-      4   & { }\brp{\frac{\sqrt{2}}{16}}  &  { }\brp{\frac{\sqrt{2}}{16}}
-  \end{array}$
-%  &\includegraphics{../common/math/graphics/pdfs/bspline_phi_h.pdf}&\includegraphics{../common/math/graphics/pdfs/bspline_psi_g.pdf}
-\end{array}}
-\\\indentx\tbox{\includegraphics{../common/math/graphics/pdfs/n3_h.pdf}}
-  \indentx\tbox{\includegraphics{../common/math/graphics/pdfs/n3_pz.pdf}}
-\end{example}
-\begin{proof}
-\begin{enumerate}
-  \item These results follow from \prefp{thm:Bsplineh}.
-        \\\indentx$\brp{\begin{array}{c|*{9}{c}}
-            n=0: &   &   &   &   & 1 &   &   &   &
-          \\n=1: &   &   &   & 1 &   & 1 &   &   &
-          \\n=2: &   &   & 1 &   & 2 &   & 1 &   &
-          \\n=3: &   & 1 &   & 3 &   & 3 &   & 1 &
-          \\n=4: & 1 &   & 4 &   & 6 &   & 4 &   & 1
-        \end{array}}$
-  \item Alternative \ldots
-  \begin{align*}
-    \Zh(z)
-      &= \sqrt{2}\brs{\frac{(z+1)^4} {(1+1)^4 z^4}}
-    \\&= \frac{\sqrt{2}}{2^4}\brs{\frac{\sum_{n=0}^4 \bcoef{4}{n}z^n} {z^4}}
-      && \text{by \thme{Binomial Theorem} \ifxref{polynom}{thm:binomial}}
-    \\&= \frac{\sqrt{2}}{16} \brs{\frac{z^4 + 4z^3 + 6z^2 + 4z^ + 1}{z^4} }
-      && \text{by definition of $\bcoef{n}{k}$ \ifxref{binomial}{def:bcoef}}
-    \\&= \frac{\sqrt{2}}{16} \brs{ 1 + 4z^{-1} + 6z^{-2} + 4z^{-3} + 1z^{-4}}
-  \end{align*}
-\end{enumerate}
-\end{proof}
-
-
